--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -230,6 +230,25 @@ body {
   align-items: stretch;
 }
 
+.layout-2col {
+  /* 1/3 Case panel, 2/3 Host Agent */
+  grid-template-columns: minmax(280px, 1fr) minmax(520px, 2fr);
+  grid-template-areas: "case chat";
+  align-items: stretch;
+}
+
+.layout-2col > .rail-left {
+  grid-area: case;
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.layout-2col > .chat {
+  grid-area: chat;
+  grid-column: 2;
+  grid-row: 1;
+}
+
 .rail {
   min-width: 0;
   min-height: 0;
